RESOLVED FIXED146744
Snapshots can be misplaced when custom swipe views are offset from the window origin
https://bugs.webkit.org/show_bug.cgi?id=146744
Summary Snapshots can be misplaced when custom swipe views are offset from the window...
Tim Horton
Reported 2015-07-08 15:59:26 PDT
Snapshots can be misplaced when custom swipe views are offset from the window origin
Attachments
Patch (2.91 KB, patch)
2015-07-08 15:59 PDT, Tim Horton
dino: review+
Tim Horton
Comment 1 2015-07-08 15:59:53 PDT
Tim Horton
Comment 2 2015-07-08 16:05:00 PDT
Note You need to log in before you can comment on or make changes to this bug.