Snapshots can be misplaced when custom swipe views are offset from the window origin https://bugs.webkit.org/show_bug.cgi?id=146744 <rdar://problem/20942120>

Reviewed by Dean Jackson.

* UIProcess/mac/ViewGestureControllerMac.mm:
(WebKit::ViewGestureController::beginSwipeGesture):
Keep swipeArea in window coordinates; it was already in window coordinates
when using custom swipe views, but not in the non-custom case.

Convert from window coordinates to parent-of-m_swipeLayer coordinates when
determining m_swipeLayer's frame.


Canonical link: https://commits.webkit.org/164825@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@186532 268f45cc-cd09-0410-ab3c-d52691b4dbfc